Enable autostart of API client on Primary
Adds a config flag that turns on the API client following the Primary
coordinator. The retcode of the start/stop commands is ignore so this
can fail gracefully if e.g. the client isn't installed.

--- a/node-daemon/pvcd.sample.yaml
+++ b/node-daemon/pvcd.sample.yaml
@@ -21,6 +21,8 @@ pvc:
     enable_networking: True
     # enable_storage: Enable or disable Ceph storage management functionality
     enable_storage: True
+    # enable_api: Enable or disable the API client, if installed, when node is Primary
+    enable_api: True
   # cluster: Cluster-level configuration
   cluster:
     # coordinators: The list of cluster coordinator hostnames
