--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: Parallel Virtual Cluster documentation
-theme: readthedocs
+theme:
+  name: material
+  custom_dir: 'mkdocs/themes/mkdocs-material/material'
 markdown_extensions:
   - toc:
       permalink: yes
