Revert "Add material theme to docs"
This reverts commit e9dcbf619801ba73333b38ed9feb727b760efabc.

ReadTheDocs really doesn't like this theme, so forget that idea.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,5 @@
 site_name: Parallel Virtual Cluster documentation
-theme:
-  name: material
-  custom_dir: 'mkdocs/themes/mkdocs-material/material'
+theme: readthedocs
 markdown_extensions:
   - toc:
       permalink: yes
