--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
   before_script: 
     - git submodule update --init
   script:
-    - /bin/bashs build-deb.sh
+    - /bin/bash build-deb.sh
     - /usr/local/bin/deploy-package
   artifacts:
     paths:
