Add provisioner to Debian packages

--- a/debian/control
+++ b/debian/control
@@ -26,7 +26,7 @@ Description: Parallel Virtual Cluster common client libraries (Python 3)
 Package: pvc-client-cli
 Architecture: all
 Depends: pvc-client-common, python3-yaml, python3-netifaces, python3-dialog
-Description: Parallel Virtual Cluster client (Python 3)
+Description: Parallel Virtual Cluster CLI client (Python 3)
  A KVM/Zookeeper/Ceph-based VM and private cloud manager
  .
  This package installs the PVC command-line client
@@ -34,8 +34,16 @@ Description: Parallel Virtual Cluster client (Python 3)
 Package: pvc-client-api
 Architecture: all
 Depends: pvc-client-common, python3-yaml, python3-flask, python3-gevent
-Description: Parallel Virtual Cluster client (Python 3)
+Description: Parallel Virtual Cluster API client (Python 3)
  A KVM/Zookeeper/Ceph-based VM and private cloud manager
  .
  This package installs the PVC API client daemon
+
+Package: pvc-client-provisioner
+Architecture: all
+Depends: pvc-client-common, python3-yaml, python3-flask, python3-celery, python-celery-common
+Description: Parallel Virtual Cluster Provisioner client (Python 3)
+ A KVM/Zookeeper/Ceph-based VM and private cloud manager
+ .
+ This package installs the PVC provisioner daemon
 
