Move all provisioner API functionality into main

--- a/debian/control
+++ b/debian/control
@@ -33,17 +33,8 @@ Description: Parallel Virtual Cluster CLI client (Python 3)
 
 Package: pvc-client-api
 Architecture: all
-Depends: pvc-client-common, python3-yaml, python3-flask, python3-gevent
+Depends: pvc-client-common, python3-yaml, python3-flask, python3-gevent, python3-celery, python-celery-common
 Description: Parallel Virtual Cluster API client (Python 3)
  A KVM/Zookeeper/Ceph-based VM and private cloud manager
  .
  This package installs the PVC API client daemon
-
-Package: pvc-client-provisioner
-Architecture: all
-Depends: pvc-client-common, python3-yaml, python3-flask, python3-celery, python-celery-common
-Description: Parallel Virtual Cluster Provisioner client (Python 3)
- A KVM/Zookeeper/Ceph-based VM and private cloud manager
- .
- This package installs the PVC provisioner daemon
-
