--- a/client-api/pvc-api.sample.yaml
+++ b/client-api/pvc-api.sample.yaml
@@ -41,3 +41,40 @@ pvc:
             cert_file: ""
             # key_file: SSL certificate key file
             key_file: ""
+    # provisioner: Configuration of the Provisioner API listener
+    provisioner:
+        # database: Backend database configuration
+        database:
+            # host: PostgreSQL hostname, usually 'localhost'
+            host: 10.100.0.252
+            # port: PostgreSQL port, invariably '5432'
+            port: 5432
+            # name: PostgreSQL database name, invariably 'pvcprov'
+            name: pvcprov
+            # user: PostgreSQL username, invariable 'pvcprov'
+            user: pvcprov
+            # pass: PostgreSQL user password, randomly generated
+            pass: pvcprov
+        # queue: Celery backend queue using the PVC Zookeeper cluster
+        queue:
+            # host: Redis hostname, usually 'localhost'
+            host: localhost
+            # port: Redis port, invariably '6279'
+            port: 6379
+            # path: Redis queue path, invariably '/0'
+            path: /0
+        # ceph_cluster: Information about the Ceph storage cluster
+        ceph_cluster:
+            # storage_hosts: The list of hosts that the Ceph monitors are valid on; if empty (the default),
+            #                uses the list of coordinators
+            storage_hosts:
+              - ceph1
+              - ceph2
+              - ceph2
+            # storage_domain: The storage domain name, concatenated with the coordinators list names
+            #                 to form monitor access strings
+            storage_domain: "s.bonilan.net"
+            # ceph_monitor_port: The port that the Ceph monitor on each coordinator listens on
+            ceph_monitor_port: 6789
+            # ceph_storage_secret_uuid: Libvirt secret UUID for Ceph storage access
+            ceph_storage_secret_uuid: "c416032b-2ce9-457f-a5c2-18704a3485f4"
