--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,8 @@ X-Python3-Version: >= 3.2
 
 Package: pvc-daemon
 Architecture: all
-Depends: python3-kazoo, python3-psutil, python3-apscheduler, python3-libvirt, python3-psycopg2, python3-dnspython, python3-yaml, ipmitool, libvirt-daemon-system, arping, vlan, bridge-utils, dnsmasq, nftables, pdns-server, pdns-backend-pgsql
-Suggests: pvc-client-cli
+Depends: pvc-client-common, python3-kazoo, python3-psutil, python3-apscheduler, python3-libvirt, python3-psycopg2, python3-dnspython, python3-yaml, ipmitool, libvirt-daemon-system, arping, vlan, bridge-utils, dnsmasq, nftables, pdns-server, pdns-backend-pgsql
+Suggests: pvc-client-api, pvc-client-cli
 Description: Parallel Virtual Cluster virtualization daemon (Python 3)
  A KVM/Zookeeper/Ceph-based VM and private cloud manager
  .
