--- a/debian/control
+++ b/debian/control
@@ -33,7 +33,7 @@ Description: Parallel Virtual Cluster API client (Python 3)
 
 Package: pvc-client-cli
 Architecture: all
-Depends: python3-requests, python3-yaml
+Depends: python3-requests, python3-yaml, python3-lxml
 Description: Parallel Virtual Cluster CLI client (Python 3)
  A KVM/Zookeeper/Ceph-based VM and private cloud manager
  .
