Implement bridge_device for bridged VNIs
Required due to #64. Bridged networks were being created on top of a
vLAN if the Cluster network was a vLAN device, rather than being created
on the underlying device. This came from a previous revision of the
cluster architecture guidelines where Cluster was supposed to be a raw
device rather than a vLAN. This fixed the problem by implementing a
configuration field for a "bridge_device", a NIC device that can then
have the bridged vLANs created on top of it.

Fixes #64

--- a/node-daemon/pvcd.sample.yaml
+++ b/node-daemon/pvcd.sample.yaml
@@ -153,6 +153,8 @@ pvc:
       # networking: PVC networking configuration
       # OPTIONAL if enable_networking: False
       networking:
+        # bridge_device: Underlying device to use for bridged vLAN networks; usually the device underlying <cluster>
+        bridge_device: ens4
         # upstream: Upstream physical interface device
         upstream:
           # device: Upstream interface device name
