--- a/client-api/provisioner/examples/multipart-userdata.yaml
+++ b/client-api/provisioner/examples/multipart-userdata.yaml
@@ -11,6 +11,6 @@ users:
 Content-Type: text/x-shellscript; charset="us-ascii"
 
 #!/bin/bash
-echo "koz is koz" >> /etc/motd
+echo "pvc is grand" >> /etc/motd
 
 --==BOUNDARY==--
