Use consistent naming of components
Rename "pvcd" to "pvcnoded", and "pvc-api" to "pvcapid" so names for the
daemons are fully consistent. Update the names of the configuration
files as well to match this new formatting.

References #79

--- a/api-daemon/pvcapid.sample.yaml
+++ b/api-daemon/pvcapid.sample.yaml
@@ -1,11 +1,11 @@
 ---
-# pvc-api client configuration file example
+# pvcapid configuration file example
 #
-# This configuration file specifies details for the PVC API client running on
+# This configuration file specifies details for the PVC API daemon running on
 # this machine. Default values are not supported; the values in this sample
 # configuration are considered defaults and can be used as-is.
 #
-# Copy this example to /etc/pvc/pvc-api.conf and edit to your needs
+# Copy this example to /etc/pvc/pvcapid.conf and edit to your needs
 
 pvc:
     # debug: Enable/disable API debug mode
