--- a/node-daemon/pvcnoded.service
+++ b/node-daemon/pvcnoded.service
@@ -2,16 +2,16 @@
 
 [Unit]
 Description = Parallel Virtual Cluster node daemon
-After = network-online.target libvirtd.service zookeeper.service
-PartOf = pvcd.target
+After = network-online.target zookeeper.service
+PartOf = pvc.target
 
 [Service]
 Type = simple
 WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
-Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcd.yaml
-ExecStart = /usr/share/pvc/pvcd.py
+Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcnoded.yaml
+ExecStart = /usr/share/pvc/pvcnoded.py
 Restart = on-failure
 
 [Install]
-WantedBy = pvcd.target
+WantedBy = pvc.target
