--- a/node-daemon/pvcnoded.service
+++ b/node-daemon/pvcnoded.service
@@ -10,7 +10,9 @@ Type = simple
 WorkingDirectory = /usr/share/pvc
 Environment = PYTHONUNBUFFERED=true
 Environment = PVCD_CONFIG_FILE=/etc/pvc/pvcnoded.yaml
+ExecStartPre = /bin/sleep 2
 ExecStart = /usr/share/pvc/pvcnoded.py
+ExecStopPost = /bin/sleep 2
 Restart = on-failure
 
 [Install]
